[package]
name = "catalyst-utils"
version = "0.1.0"
edition = "2021"
description = "Utility functions for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Error handling
thiserror = "1.0"

# Async support - REQUIRED for your traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"
rand = "0.8"

# Logging (you're using both tracing and custom logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network and async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Additional dependencies used in your code
libp2p = { version = "0.54", optional = true }

[features]
default = []
full = ["tokio", "libp2p"]
async = ["tokio"]
network = ["libp2p"]