[package]
name = "catalyst-utils"
version = "0.1.0"
edition = "2021"
description = "Utility functions for Catalyst Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Error handling
thiserror = "1.0"

# Async support - REQUIRED for your traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

# Logging (you're using both tracing and custom logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network and async runtime - make tokio non-optional for examples
tokio = { version = "1.0", features = ["full"] }

# Additional dependencies used in your code
libp2p = { version = "0.54", optional = true }

# Metrics dependencies (optional)
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
full = ["libp2p", "metrics"]
network = ["libp2p"]
metrics = ["prometheus"]

# Use unique example names to avoid collisions with other crates
[[example]]
name = "utils_basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "utils_serialization_example"
path = "examples/serialization_example.rs"

[[example]]
name = "utils_logging_example"
path = "examples/logging_example.rs"

[[example]]
name = "utils_metrics_example"
path = "examples/metrics_example.rs"